[gd_scene load_steps=8 format=3 uid="uid://cxyrjqrgn3xc6"]

[ext_resource type="FontFile" uid="uid://c54oki7w861qe" path="res://assets/fonts/ReturnOfThePixels-Regular.ttf" id="1_q0dby"]
[ext_resource type="Script" uid="uid://chmtk3w1fyha0" path="res://scripts/ui/menu/pause_menu.gd" id="1_sda51"]
[ext_resource type="PackedScene" uid="uid://byov0k4shc0lk" path="res://scenes/ui/menu/settings.tscn" id="3_4ko1u"]

[sub_resource type="Gradient" id="Gradient_sda51"]
offsets = PackedFloat32Array(0.668342, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4ko1u"]
gradient = SubResource("Gradient_sda51")

[sub_resource type="Gradient" id="Gradient_yle2f"]
offsets = PackedFloat32Array(0, 0.331658)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3gxys"]
gradient = SubResource("Gradient_yle2f")

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sda51")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.862745)
custom_minimum_size = Vector2(211, 576)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -288.0
offset_right = 211.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_4ko1u")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.862745)
custom_minimum_size = Vector2(211, 576)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -288.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_3gxys")
expand_mode = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(256, 448)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -224.0
offset_right = 128.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="ResumeButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="Label" type="Label" parent="ButtonContainer/ResumeButton"]
custom_minimum_size = Vector2(256, 23)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -11.5
offset_right = 128.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_q0dby")
theme_override_font_sizes/font_size = 28
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="Label" type="Label" parent="ButtonContainer/OptionsButton"]
custom_minimum_size = Vector2(256, 23)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -11.5
offset_right = 128.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_q0dby")
theme_override_font_sizes/font_size = 28
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="Label" type="Label" parent="ButtonContainer/MainMenuButton"]
custom_minimum_size = Vector2(256, 23)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -11.5
offset_right = 128.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_q0dby")
theme_override_font_sizes/font_size = 28
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitGameButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2

[node name="Label" type="Label" parent="ButtonContainer/ExitGameButton"]
custom_minimum_size = Vector2(256, 23)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -11.5
offset_right = 128.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_q0dby")
theme_override_font_sizes/font_size = 28
text = "Exit Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" parent="." instance=ExtResource("3_4ko1u")]
visible = false
layout_mode = 1

[connection signal="pressed" from="ButtonContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
